--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,6 @@ langchain_chroma==0.1.1
 langchain_text_splitters==0.0.2
 langchain_core==0.1.52
 langchain==0.1.20
-pysqlite3-binary
+pyarrow==16.1.0
+bson==0.5.10
+scikit-learn==1.5.0
